# uianimator

./: Cargo.toml  README.md
examples/: default_animator_f64_linear.rs  default_animator_f64_quadratic.rs
examples/gui_default_animator_f64_quadratic/: Cargo.toml
examples/gui_default_animator_f64_quadratic/src/: main.rs
src/: default_animator_f64_linear.rs  default_animator_f64_quadratic.rs  lib.rs
